# android-pair

./: CMakeLists.txt  CMakeLists.txt.old  main.cpp  systray.pro  systray.qrc  window.cpp  window.h
